# FRTodo

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/business/edit/bloc/: edit_todo_bloc.dart  edit_todo_event.dart  edit_todo_state.dart
lib/business/edit/view/: edit_todo_page.dart
lib/business/home/cubit/: home_cubit.dart  home_state.dart
lib/business/home/view/: home_page.dart
lib/business/overview/bloc/: todos_overview_bloc.dart  todos_overview_event.dart  todos_overview_state.dart
lib/business/overview/models/: todos_view_filter.dart
lib/business/overview/view/: todos_overview_page.dart
lib/business/overview/widgets/: todo_list_tile.dart  todos_overview_filter_button.dart  todos_overview_options_button.dart  widgets.dart
lib/business/stats/bloc/: stats_bloc.dart  stats_state.dart
lib/l10n/: i10n.dart
lib/theme/: theme.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust_todo/: Cargo.toml
rust_todo/migrations/2022-02-23-083426_create_todos/: up.sql
rust_todo/rust_todo.xcodeproj/: project.pbxproj
rust_todo/rust_todo.xcodeproj/xcuserdata/nickming.xcuserdatad/xcschemes/: xcschememanagement.plist
rust_todo/src/: bridge_generated.rs  database.rs  error.rs  lib.rs  log.rs  models.rs  schema.rs  todo_impl.rs
test/: widget_test.dart
web/: index.html  manifest.json
(+3 files in other folders)
