[package]
name = "rust_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]


[dependencies]
diesel = { version = "1.4.7", features = ["sqlite",  "r2d2"] }
diesel_migrations = "1.4.0"
tokio = { version = '1.9.0', features = ["full", "test-util"] }
log = "0.4"
log4rs = "1"
lazy_static = "1.4"
chrono = "0.4"
crossbeam-channel = "^0.4"
backtrace = "0.3"
time = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.25.1", features = ["bundled"] }
flutter_rust_bridge = "1.22.0"

[dev-dependencies]
dotenv = "0.15.0"
rand = "0.8.0"
tokio = { version = '1.9.0', features = ["full", "test-util"] }
